<resources>
    <string name="app_name">Lynx</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="learn">学习</string>
    <string name="practice">练习</string>
    <string name="report">报告</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="alert_text">你将要关闭这个界面，并且你输入了一些内容，</string>
    <string name="alert_message">你需要保存这些信息吗？</string>
    <string name="alert_negative">不，我不想</string>
    <string name="alert_positive">好的，下次我也能看到</string>
    <string name="alert_negative_message">你的记录没有被保存</string>
    <string name="alert_positive_message">你的记录已保存</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="edit_destory">销毁</string>
    <string name="edit_finish">完成</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>