<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/learn"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/learn" />
        <item
            android:id="@+id/practice"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/practice" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/settings" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/report"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/report"/>
        <item
            android:id="@+id/about"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/about"/>
    </group>
</menu>