<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/learn">

    <fragment
        android:id="@+id/learn"
        android:name="com.lynx.uclass.ItemFragment"
        android:label="@string/learn"
        tools:layout="@layout/item_activity" />

    <fragment
        android:id="@+id/practice"
        android:name="com.lynx.uclass.ItemFragment"
        android:label="@string/practice"
        tools:layout="@layout/item_activity" />

    <fragment
        android:id="@+id/feedback"
        android:name="com.lynx.uclass.ItemFragment"
        android:label="@string/feedback"
        tools:layout="@layout/activity_feedback"/>

    <fragment
        android:id="@+id/report"
        android:name="com.lynx.uclass.ItemFragment"
        android:label="@string/report"
        tools:layout="@layout/activity_report"/>

    <fragment
        android:id="@+id/settings"
        android:name="com.lynx.navigation.settings.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/settings_activity" />

    <fragment
        android:id="@+id/about"
        android:name="com.lynx.uclass.ItemFragment"
        android:label="@string/about"
        tools:layout="@layout/activity_about"/>
</navigation>